samples/_failures_safe/1761620041_e3772b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c892554.c: In function ‘main’:
./samples/SAFE/__tmp_2c892554.c:124: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_2c892554.c:123:5: error: expected declaration or statement at end of input
  123 |     if
      |     ^~
